Adjusted the base vehicle base class and restructured it's subclasses; final layout? TODO finishing standardized interfaces;

--- a/KillFrenzy/GTA III Multiplayer/GTA III Multiplayer/GTA III Multiplayer.vcxproj
+++ b/KillFrenzy/GTA III Multiplayer/GTA III Multiplayer/GTA III Multiplayer.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="..\..\..\Shared\logic\LuaManager.h" />
     <ClInclude Include="..\..\..\Shared\logic\LuaTimer.h" />
     <ClInclude Include="..\..\..\Shared\logic\LuaTimerManager.h" />
+    <ClInclude Include="..\..\..\Shared\logic\networking\NetworkStruct.h" />
     <ClInclude Include="..\..\..\Shared\logic\RegisteredCommands.h" />
     <ClInclude Include="..\..\..\Shared\logic\Resource.h" />
     <ClInclude Include="..\..\..\Shared\logic\ResourceManager.h" />
