--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -2674,6 +2674,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\Shared\logic\networking\NetworkRakNet.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\Shared\logic\networking\NetworkStruct.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\RegisteredCommands.h"
 						>
 					</File>
