pfft, turned the Lua functions mostly to OOP! I still have to make the underlying system compatible though; also to add sleek OOP versions D:

--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -1765,6 +1765,70 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="gui"
+				>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIButton.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUICheckbox.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUICombobox.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIEdit.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIGridlist.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUILabel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIMemo.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIProgressbar.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIRadiobutton.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIScrollbar.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIScrollpane.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIStaticImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUITab.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUITabpanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIWindow.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -2724,6 +2788,70 @@
 				</File>
 				<File
 					RelativePath="..\..\sdk\derived\include.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="gui"
+				>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIButton.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUICheckbox.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUICombobox.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIEdit.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIGridlist.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUILabel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIMemo.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIProgressbar.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIRadiobutton.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIScrollbar.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIScrollpane.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIStaticImage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUITab.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUITabpanel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\gui\CClientGUIWindow.h"
 					>
 				</File>
 			</Filter>
