Finished up on the ground-up structure of the Lua functions; TODO Element system overhaul

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -421,10 +421,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\CCarSA.cpp"
-				>
-			</File>
-			<File
 				RelativePath="CCheckpointSA.cpp"
 				>
 			</File>
@@ -573,6 +569,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CMonsterTruckSA.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CObjectSA.cpp"
 				>
 			</File>
@@ -682,6 +682,10 @@
 			</File>
 			<File
 				RelativePath=".\CPtrNodeSA.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CQuadBikeSA.cpp"
 				>
 			</File>
 			<File
@@ -998,10 +1002,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\CCarSA.h"
-				>
-			</File>
-			<File
 				RelativePath="CCheckpointSA.h"
 				>
 			</File>
@@ -1150,6 +1150,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CMonsterTruckSA.h"
+				>
+			</File>
+			<File
 				RelativePath="CObjectSA.h"
 				>
 			</File>
@@ -1263,6 +1267,10 @@
 			</File>
 			<File
 				RelativePath=".\CPtrNodeSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CQuadBikeSA.h"
 				>
 			</File>
 			<File
