--- a/MTA10/launch/_Launch 2008.vcproj
+++ b/MTA10/launch/_Launch 2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Client - Launch"
 	ProjectGUID="{C9188AB9-F099-4370-85DC-876B3904B939}"
 	RootNamespace="Client - Launch"
@@ -79,8 +79,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				LinkLibraryDependencies="false"
 				AdditionalDependencies="shlwapi.lib psapi.lib"
-				OutputFile="C:/Program Files/MTA San Andreas 1.2/Multi Theft Auto_d.exe"
+				OutputFile="D:/Program Files/MTA San Andreas 1.2/Multi Theft Auto_d.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
@@ -180,8 +181,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				LinkLibraryDependencies="false"
 				AdditionalDependencies="shlwapi.lib psapi.lib"
-				OutputFile="c:\program files\MTA San Andreas 1.2\Multi Theft Auto.exe"
+				OutputFile="D:\program files\MTA San Andreas 1.2\Multi Theft Auto.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				GenerateDebugInformation="true"
@@ -286,6 +288,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				LinkLibraryDependencies="false"
 				AdditionalDependencies="shlwapi.lib psapi.lib"
 				OutputFile="..\..\output\MTA San Andreas\Multi Theft Auto.exe"
 				LinkIncremental="1"
