--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -72,9 +72,9 @@
 				RegisterOutput="false"
 				IgnoreImportLibrary="false"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="libv2.lib lua5.1d.lib libspeexd.lib bass.lib bassmix.lib tags.lib Psapi.lib Winmm.lib kernel32.lib ws2_32.lib zlibd_2008.lib Iphlpapi.lib"
+				AdditionalDependencies="lua5.1d.lib libspeexd.lib bass.lib Psapi.lib bassmix.lib tags.lib wsock32.lib zlibd_2008.lib"
 				ShowProgress="0"
-				OutputFile="C:\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client_d.dll"
+				OutputFile="D:\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client_d.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="../../../vendor/libspeex;../../../vendor/bass/lib;../../../vendor/lua/lib;../../../vendor/libv2/lib;../../../vendor/zlib/lib"
@@ -165,8 +165,8 @@
 				IgnoreImportLibrary="false"
 				LinkLibraryDependencies="false"
 				AdditionalOptions="/FIXED:NO"
-				AdditionalDependencies="libv2.lib lua5.1.lib libspeex.lib bass.lib bassmix.lib tags.lib Psapi.lib Winmm.lib kernel32.lib wsock32.lib zlib_2008.lib"
-				OutputFile="C:\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client.dll"
+				AdditionalDependencies="lua5.1.lib libspeex.lib bass.lib bassmix.lib tags.lib Psapi.lib wsock32.lib zlib_2008.lib"
+				OutputFile="D:\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="../../../vendor/libspeex;../../../vendor/bass/lib;../../../vendor/lua/lib;../../../vendor/libv2/lib;../../../vendor/zlib/lib"
@@ -180,6 +180,7 @@
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
+				LinkTimeCodeGeneration="1"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
 				ImportLibrary=".\Release/Client.lib"
