--- a/Shared/XML/_XML 2008.vcproj
+++ b/Shared/XML/_XML 2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="Shared - XML Module"
 	ProjectGUID="{E28A87BB-7417-4DD7-ADF4-88F918CF055C}"
 	RootNamespace="Shared - XML Module"
@@ -115,7 +115,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="xcopy /y xmll_d.dll &quot;C:\Program Files\MTA San Andreas 1.2\mta\&quot; &amp;&amp; xcopy /y xmll_d.dll &quot;C:\Program Files\MTA San Andreas 1.2\server\&quot;"
+				CommandLine="xcopy /y xmll_d.dll &quot;D:\Program Files\MTA San Andreas 1.2\mta\&quot; &amp;&amp; xcopy /y xmll_d.dll &quot;D:\Program Files\MTA San Andreas 1.2\server\&quot;"
 			/>
 		</Configuration>
 		<Configuration
@@ -222,7 +222,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="xcopy /y xmll.dll &quot;C:\Program Files\MTA San Andreas 1.2\mta\&quot; &amp;&amp; xcopy /y xmll.dll &quot;C:\Program Files\MTA San Andreas 1.2\server\&quot;"
+				CommandLine="xcopy /y xmll.dll &quot;D:\Program Files\MTA San Andreas 1.2\mta\&quot; &amp;&amp; xcopy /y xmll.dll &quot;D:\Program Files\MTA San Andreas 1.2\server\&quot;"
 			/>
 		</Configuration>
 		<Configuration
