--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -74,7 +74,7 @@
 				LinkLibraryDependencies="false"
 				AdditionalDependencies="lua5.1d.lib libspeexd.lib bass.lib Psapi.lib bassmix.lib tags.lib wsock32.lib zlibd_2008.lib"
 				ShowProgress="0"
-				OutputFile="D:\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client_d.dll"
+				OutputFile="$(HOMEDRIVE)\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client_d.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="../../../vendor/libspeex;../../../vendor/bass/lib;../../../vendor/lua/lib;../../../vendor/libv2/lib;../../../vendor/zlib/lib"
@@ -166,7 +166,7 @@
 				LinkLibraryDependencies="false"
 				AdditionalOptions="/FIXED:NO"
 				AdditionalDependencies="lua5.1.lib libspeex.lib bass.lib bassmix.lib tags.lib Psapi.lib wsock32.lib zlib_2008.lib"
-				OutputFile="D:\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client.dll"
+				OutputFile="$(HOMEDRIVE)\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="../../../vendor/libspeex;../../../vendor/bass/lib;../../../vendor/lua/lib;../../../vendor/libv2/lib;../../../vendor/zlib/lib"
