--- a/MTA10_Server/core/_ServerCore 2008.vcproj
+++ b/MTA10_Server/core/_ServerCore 2008.vcproj
@@ -75,7 +75,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib Imagehlp.lib Winmm.lib dbghelp.lib zlibd_2008.lib"
-				OutputFile="C:\Program Files\MTA San Andreas 1.2\server\core_d.dll"
+				OutputFile="$(HOMEDRIVE)\Program Files\MTA San Andreas 1.2\server\core_d.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="../dependencies;../../vendor/zlib/lib"
@@ -174,7 +174,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wsock32.lib Imagehlp.lib Winmm.lib dbghelp.lib zlib_2008.lib"
-				OutputFile="C:\Program Files\MTA San Andreas 1.2\server\core.dll"
+				OutputFile="$(HOMEDRIVE)\Program Files\MTA San Andreas 1.2\server\core.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="../dependencies;../../vendor/zlib/lib"
