--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -72,7 +72,7 @@
 				RegisterOutput="false"
 				IgnoreImportLibrary="false"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="lua5.1d.lib libspeexd.lib bass.lib Psapi.lib bassmix.lib tags.lib wsock32.lib zlibd_2008.lib"
+				AdditionalDependencies="lua5.1d.lib libspeexd.lib bass.lib Psapi.lib bassmix.lib tags.lib zlibd_2008.lib"
 				ShowProgress="0"
 				OutputFile="$(HOMEDRIVE)\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client_d.dll"
 				LinkIncremental="2"
@@ -165,7 +165,7 @@
 				IgnoreImportLibrary="false"
 				LinkLibraryDependencies="false"
 				AdditionalOptions="/FIXED:NO"
-				AdditionalDependencies="lua5.1.lib libspeex.lib bass.lib bassmix.lib tags.lib Psapi.lib wsock32.lib zlib_2008.lib"
+				AdditionalDependencies="lua5.1.lib libspeex.lib bass.lib bassmix.lib tags.lib Psapi.lib zlib_2008.lib"
 				OutputFile="$(HOMEDRIVE)\Program Files\MTA San Andreas 1.2\mods\deathmatch\Client.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
