miscellaneous updates to MTA:GREEN; improved the OOP environment; fixed Lua networking (CLuaArguments); medi-STABLE (debug this build please, especially it's Lua environment!); if you experience the deathmatch error, recompile everything and try running the build again!

--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -1717,6 +1717,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\Shared\logic\LuaMatrix.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\Shared\logic\LuaTimer.cpp"
 						>
 					</File>
@@ -2724,6 +2728,10 @@
 					</File>
 					<File
 						RelativePath="..\..\..\Shared\logic\LuaManager.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\Shared\logic\LuaMatrix.h"
 						>
 					</File>
 					<File
