--- a/mta_gta3_modeL_replacer/bin/config.ini
+++ b/mta_gta3_modeL_replacer/bin/config.ini
@@ -6,8 +6,8 @@ yOffset=0
 zOffset=300
 mtaBLUE=true
 jetpackHeight=1000
-; Available methods: stream, distance
-method=stream
+; Available methods: stream, distance, static
+method=static
 static=false
 ; For LOD support
 lodSupport=false
