--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -646,6 +646,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\shared_logic\CClientAtomic.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\shared_logic\CClientCamera.cpp"
 					>
 				</File>
@@ -859,6 +863,10 @@
 				</File>
 				<File
 					RelativePath="..\shared_logic\CClientRenderElementManager.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\CClientRwObject.cpp"
 					>
 				</File>
 				<File
@@ -2248,6 +2256,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\shared_logic\CClientAtomic.h"
+					>
+				</File>
+				<File
 					RelativePath="..\shared_logic\CClientCamera.h"
 					>
 				</File>
@@ -2473,6 +2485,10 @@
 				</File>
 				<File
 					RelativePath="..\shared_logic\CClientRenderElementManager.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\CClientRwObject.h"
 					>
 				</File>
 				<File
