--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Client - Game SA"
 	ProjectGUID="{E13D1441-438B-4A03-AB79-5E8EF08EE414}"
 	RootNamespace="Client - Game SA"
@@ -777,6 +777,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CVehicleComponentSA.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CVehicleModelInfoSA.cpp"
 				>
 			</File>
@@ -1411,6 +1415,10 @@
 			</File>
 			<File
 				RelativePath=".\CTransformationSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CVehicleComponentSA.h"
 				>
 			</File>
 			<File
