--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="Client - Deathmatch"
 	ProjectGUID="{F661CA1A-A296-4505-9583-3BEC58FB79C5}"
 	RootNamespace="Client - Deathmatch"
@@ -931,6 +931,10 @@
 				</File>
 				<File
 					RelativePath="..\shared_logic\CClientVehicle.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\CClientVehicleComponent.cpp"
 					>
 				</File>
 				<File
@@ -2553,6 +2557,10 @@
 				</File>
 				<File
 					RelativePath="..\shared_logic\CClientVehicle.h"
+					>
+				</File>
+				<File
+					RelativePath="..\shared_logic\CClientVehicleComponent.h"
 					>
 				</File>
 				<File
