fixed MTA:Lua obscure parent->child destruction relationship crash which commonly happened at CEGUI; fixed CEGUI object management in deathmatch Lua; etc

--- a/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
+++ b/MTA10/mods/deathmatch/_Deathmatch 2008.vcproj
@@ -1185,6 +1185,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\shared_logic\luadefs\luaobject.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\shared_logic\luadefs\luaped.cpp"
 						>
 					</File>
@@ -2692,6 +2696,10 @@
 					</File>
 					<File
 						RelativePath="..\shared_logic\luadefs\CLuaTaskDefs.h"
+						>
+					</File>
+					<File
+						RelativePath="..\shared_logic\luadefs\luaobject.h"
 						>
 					</File>
 					<File
