cleaned up some definitions; found a flaw in the custom component system that the engine modifies vehicle models through upgrades, we will have to reven the add and remove functions; reverse engineered 60% of the 2dfx initialization code; added more internal RW functions;

--- a/MTA10/game_sa/_game_sa 2008.vcproj
+++ b/MTA10/game_sa/_game_sa 2008.vcproj
@@ -593,6 +593,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CParticleDataSA.info.cpp"
+				>
+			</File>
+			<File
 				RelativePath="CParticleObjectSA.cpp"
 				>
 			</File>
@@ -1231,6 +1235,10 @@
 			</File>
 			<File
 				RelativePath=".\CParticleDataSA.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CParticleDataSA.info.h"
 				>
 			</File>
 			<File
